add getDay func
